title fix overflow auto

--- a/themes/mel/assets/sass/_structure.scss
+++ b/themes/mel/assets/sass/_structure.scss
@@ -8,8 +8,6 @@ main {
 	display: block;
 	max-width: 900px;
 	margin: 3rem auto;
-	overflow: auto;
-	word-wrap: break-word;
 }
 
 article {
